--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: tesseract_latest
-description: A new Flutter plugin project.
+description: Flutter plugin for tesseract OCR engine. Supports Null Safety. Currently supports Android only. IOS in progress.
 version: 0.0.1
-homepage:
-publish_to: 'none'
+homepage: https://github.com/anuj171100/tesseract_latest
+# publish_to: 'none'
 
 environment:
   sdk: ">=2.17.3 <3.0.0"
